add contact to pipedrive when outreached

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PIPEDRIVE_API=c62d05bc8505cc7703f6736caccffb8f69b38325
 greenscape-PIPEDRIVE_API=f89cf6e21baf156e9303679289b9ed1987d15499
+
+AIRTABLE_API_KEY=key2tZxeaXDfyBJ9k
