--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,8 @@
             "type": "pwa-node",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/test.js"
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/index.js"
         }
     ]
 }
